# ai_tabletop_world_builder

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.frontend  LICENSE  NOTICE  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5B_IMPLEMENTATION_PLAN.md  PHASE5_IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING_QUICK_REFERENCE.md  UI_INTEGRATION_AND_QUALITY_COMPLETE.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sbom.json  start_platform.sh  test_aar_service.py  test_action_filter.py  test_adaptive_ai.py  test_audit_api.py  test_audit_log.py  test_auth_service.py  test_business_impact.py  test_content_validator.py  test_examples.md  (+10 more)
alembic/: env.py
api/: __init__.py
app/: Home.py  QUICKSTART.md  SCENARIO_EDITOR.md  config.py  constants.py
config/: __init__.py  settings.py
context/: AI-Game-Transcript.txt  L1- Hierarchical Content Generation.txt  L2 Interactive AI Applications Building a Simple AI Role Playing Game (RPG).txt  L3 Moderation & Safety of AI Games with Llama Guard.txt  L4 JSON Game Mechanics.txt
docs/: FIXES.md  PHASE4_COMPLETE.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE5B_COMPLETE.md  PHASE5_IMPLEMENTATION_PLAN.md  TESTING_QUICK_REFERENCE.md  UI_INTEGRATION_COMPLETE.md
monitoring/: prometheus.yml
scripts/: create_admin.py  docker-entrypoint.sh  generate_sbom.py  import_legacy_data.py  test_api.sh  test_scenario_generation.sh  update_attack_data.py
(+161 files in other folders)
