[project]
name = "ai-tabletop-world-builder"
version = "1.0.0"
description = "Open-source, AI-powered cybersecurity war-gaming and tabletop-exercise platform"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Adam Rhys Heaton" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # assert used (fine in tests)
    "S105",  # hardcoded password (false positives in test files)
    "S106",  # hardcoded password argument
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults — FastAPI Depends()/Query() idiom
    "S311",  # pseudo-random generators — used for game mechanics, not security
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
